--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "tailwindcss-animated": "^1.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
