--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
     "tailwindcss-animated": "^1.0.1",
     "zustand": "^4.5.2"
   },
